--- a/en/index.html
+++ b/en/index.html
@@ -31,8 +31,9 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a PhD student at [University]. My research interests include algebra, topology, and analysis.</p>
-    <p>Example inline maths: \( e^{i\pi} + 1 = 0 \).</p>
+    <p>I am a PhD student in Pure Mathematics at the University of Penguins, Antarctica. My research interests include algebra, topology, and analysis.</p>
+    <p>My favourite theorem is the Prime Number Theorem:</p>
+    <p>\( \pi (n) ~ \frac{n}{\log n} \).</p>
   </section>
 </body>
 </html>
