--- a/en/index.html
+++ b/en/index.html
@@ -14,6 +14,22 @@
     header { text-align: center; margin-bottom: 40px; }
     nav a { margin: 0 10px; text-decoration: none; color: #007acc; }
     h2 { border-bottom: 1px solid #ddd; padding-bottom: 4px; }
+    ol.brackets {
+  counter-reset: pubcount;
+  list-style: none; /* remove default numbers */
+  padding-left: 0;
+}
+
+ol.brackets li {
+  counter-increment: pubcount;
+  margin-bottom: 0.5em;
+}
+
+ol.brackets li::before {
+  content: "[" counter(pubcount) "] ";
+  font-weight: bold;
+}
+
   </style>
 </head>
 <body>
@@ -38,10 +54,10 @@
 
   <section id="publications">
     <h2>Publications</h2>
-    <ul>
-      <li>[2] Weighted central limit theorems for central values of L-functions, J. Eur. Math. Soc. 27 (2025), 2477-2529.</li>
-      <li>[1] (with K. Smith) Negative moments of the Riemann zeta function, Bull. London Math. Soc. 56 (2024), 2680-2703.</li>
-    </ul>
+    <ol class="brackets">
+      <li>Weighted central limit theorems for central values of L-functions, J. Eur. Math. Soc. 27 (2025), 2477-2529.</li>
+      <li>(with K. Smith) Negative moments of the Riemann zeta function, Bull. London Math. Soc. 56 (2024), 2680-2703.</li>
+    </ol>
   </section>
 </body>
 </html>
