--- a/en/index.html
+++ b/en/index.html
@@ -53,7 +53,7 @@ ol.brackets li::before {
 
   <section id="publications">
     <h2>Publications</h2>
-    <ol class="brackets reversed">
+    <ol class="brackets" reversed>
       <li>Weighted central limit theorems for central values of L-functions, J. Eur. Math. Soc. 27 (2025), 2477-2529.</li>
       <li>(with K. Smith) Negative moments of the Riemann zeta function, Bull. London Math. Soc. 56 (2024), 2680-2703.</li>
     </ol>
