--- a/en/index.html
+++ b/en/index.html
@@ -57,5 +57,22 @@
       <li value="1">(with K. Smith) Negative moments of the Riemann zeta function, Bull. London Math. Soc. 56 (2024), 2680-2703.</li>
     </ol>
   </section>
+
+  <section id="teaching">
+    <h2>Teaching</h2>
+    
+    <h3>2024-2025 Semester 2 (Feb 2025 - Jun 2025)</h3>
+    <ul>
+      <li>Course Coordinator, Analysis I (MATH2232)</li>
+      <li>Tutorial Leader, Probability I (MATH1232)</li>
+    </ul>
+
+    <h3>2024-2025 Semester 1 (Sep 2024 - Jan 2025)</h3>
+    <ul>
+      <li>Tutorial Leader, Analysis II (MATH3441)</li>
+      <li>Tutorial Leader, Topology (MATH4441)</li>
+      <li>Tutorial Leader, Group Theory (MATH2221)</li>
+    </ul>
+  </section>
 </body>
 </html>
