--- a/en/index.html
+++ b/en/index.html
@@ -10,7 +10,7 @@
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
   <style>
-    body { font-family: Georgia, serif; max-width: 800px; margin: auto; padding: 20px; line-height: 1.6; }
+    body { font-family: "Times New Roman", Times, serif; max-width: 800px; margin: auto; padding: 20px; line-height: 1.6; }
     header { text-align: center; margin-bottom: 40px; }
     nav a { margin: 0 10px; text-decoration: none; color: #007acc; }
     h2 { border-bottom: 1px solid #ddd; padding-bottom: 4px; }
