--- a/en/index.html
+++ b/en/index.html
@@ -33,6 +33,10 @@
 <body>
   <header>
     <h1>Tommy Lam</h1>
+    <div class="lang-switch">
+      Languages:
+      <a href="/de/">Deutsch</a>
+    </div>
     <nav>
       <a href="#about">About</a>
       <a href="#research">Research</a>
