--- a/de/index.html
+++ b/de/index.html
@@ -18,6 +18,10 @@
 <body>
   <header>
     <h1>Tommy Lam</h1>
+    <div class="lang-switch">
+      Sprachen:
+      <a href="/en/">English</a>
+    </div>
     <nav>
       <a href="#about-research">Über mich & Forschung</a>
       <a href="#publications">Publikationen</a>
