--- a/en/index.html
+++ b/en/index.html
@@ -78,5 +78,18 @@
       <li>Tutorial Leader, Group Theory (MATH2221)</li>
     </ul>
   </section>
+
+  <hr>
+  <footer>
+    <p id="last-updated"></p>
+  </footer>
+
+  <script>
+    const lastUpdated = new Date(document.lastModified);
+    const options = { day: 'numeric', month: 'long', year: 'numeric' };
+    document.getElementById("last-updated").textContent =
+      `Last updated: ${lastUpdated.toLocaleDateString('en-GB', options)}`;
+  </script>
+
 </body>
 </html>
