--- a/en/index.html
+++ b/en/index.html
@@ -50,14 +50,13 @@
   <section id="about">
     <h2>About Me</h2>
     <p>I am a PhD student in Pure Mathematics at the University of Penguins, Antarctica. My research interests include algebra, topology, and analysis.</p>
-    <p>My favourite theorem is the Prime Number Theorem:</p>
-    <p>\( \pi (n) \sim \frac{n}{\log n} \).</p>
+    <p>My favourite theorem is the Prime Number Theorem: \( \pi (n) \sim \frac{n}{\log n} \).</p>
   </section>
 
   <section id="publications">
     <h2>Publications</h2>
     <ol class="brackets">
-      <li value="2">Weighted central limit theorems for central values of L-functions, J. Eur. Math. Soc. 27 (2025), 2477-2529.</li>
+      <li value="2">Weighted central limit theorems for central values of \(L\)-functions, J. Eur. Math. Soc. 27 (2025), 2477-2529.</li>
       <li value="1">(with K. Smith) Negative moments of the Riemann zeta function, Bull. London Math. Soc. 56 (2024), 2680-2703.</li>
     </ol>
   </section>
