--- a/fr/index.html
+++ b/fr/index.html
@@ -23,9 +23,7 @@
 </head>
 <body>
   <div class="lang-switch">
-    Langues:
-    <a href="/en/">English</a> |
-    <a href="/de/">Deutsch</a>
+    Langues: <a href="/en/">English</a> | <a href="/de/">Deutsch</a>
   </div>
 
   <header>
