--- a/en/index.html
+++ b/en/index.html
@@ -36,6 +36,7 @@
     <div class="lang-switch">
       Languages:
       <a href="/de/">Deutsch</a>
+      <a href="/fr/">Français</a>
     </div>
     <nav>
       <a href="#about">About</a>
