--- a/de/index.html
+++ b/de/index.html
@@ -21,6 +21,7 @@
     <div class="lang-switch">
       Sprachen:
       <a href="/en/">English</a>
+      <a href="/fr/">Français</a>
     </div>
     <nav>
       <a href="#about-research">Über mich & Forschung</a>
